--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -500,10 +500,33 @@ body {
   }
 
   &__nav {
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    width: 100%;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+
+    @media (min-width: 1184px) {
+      position: sticky;
+      top: 0;
+      left: 0;
+      transform: none;
+      z-index: 2;
+    }
+
+    &--on {
+      transform: translateY(0);
+    }
+
+    &--off {
+      transform: translateY(-100%);
+
+      @media (min-width: 1184px) {
+        transform: none;
+      }
+    }
+
   }
 
   &__menu {
@@ -519,24 +542,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 0;
-    margin-top: 0;
+    margin: 0;
     padding: 16px 8px 32px;
     list-style: none;
     background: #ffa07a;
-    overflow: hidden;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: transform 0.3s ease-out;
 
     @media (min-width: 1184px) {
       flex-direction: row;
       justify-content: center;
       width: 100%;
-      height: auto;
       padding: 0;
       margin: 10px 0;
-      transform: none;
 
       &::before {
         content: "";
@@ -554,22 +570,6 @@ body {
       background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
       background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
       background-size: 56.57px 56.57px;
-    }
-
-    &--on {
-      height: auto;
-      transform: scaleY(1);
-      // animation-name: articleList-on;
-      // animation-duration: .6s;
-      // animation-fill-mode: both;
-    }
-
-    &--off {
-      height: 0;
-      transform: scaleY(0);
-      // animation-name: articleList-off;
-      // animation-duration: .6s;
-      // animation-fill-mode: both;
     }
 
     &::after {
