--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import "_dev-tools";
 @import "_check-list";
 @import "_game";
-@import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap&subset=latin-ext');
+@import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap&subset=latin-ext");
 // keyframes
 
 @keyframes line-off {
@@ -88,24 +88,24 @@
 @keyframes articleList-on {
   from {
     height: 0;
-    transform: scaleY(0)
+    transform: scaleY(0);
   }
 
   to {
     height: auto;
-    transform: scaleY(1)
+    transform: scaleY(1);
   }
 }
 
 @keyframes articleList-off {
   from {
     height: auto;
-    transform: scaleY(1)
+    transform: scaleY(1);
   }
 
   to {
     height: 0;
-    transform: scaleY(0)
+    transform: scaleY(0);
   }
 }
 
@@ -129,22 +129,34 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  font-family: 'Rubik', sans-serif;
-  color: #171F3F;
-  background: #FFFFEA;
+  font-family: "Rubik", sans-serif;
+  color: #171f3f;
+  background: #ffffea;
   background-size: 20px 20px;
-  background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);
-  scrollbar-width: none;
+  background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px),
+    linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);
+  // scrollbar-width: none;
   /* For Firefox */
-  -ms-overflow-style: none;
+  // -ms-overflow-style: none;
 
   /* For Internet Explorer and Edge */
-  &::-webkit-scrollbar {
-    width: 0;
-    /* For Chrome, Safari, and Opera */
-  }
+  // &::-webkit-scrollbar {
+  //   width: 0;
+  /* For Chrome, Safari, and Opera */
+  // }
 }
+.no-scroll-bar {
+  overflow-y: hidden;
+  // scrollbar-width: none;
+  /* For Firefox */
+  // -ms-overflow-style: none;
 
+  /* For Internet Explorer and Edge */
+  // &::-webkit-scrollbar {
+  // width: 0;
+  /* For Chrome, Safari, and Opera */
+  // }
+}
 /*button menu */
 .menuButton,
 .article__button {
@@ -176,13 +188,13 @@ body {
 
     &--on {
       animation-name: line-on;
-      animation-duration: .6s;
+      animation-duration: 0.6s;
       animation-fill-mode: both;
     }
 
     &--off {
       animation-name: line-off;
-      animation-duration: .6s;
+      animation-duration: 0.6s;
       animation-fill-mode: both;
     }
   }
@@ -190,7 +202,7 @@ body {
   &__switch {
     &--off {
       animation-name: switch-off;
-      animation-duration: .6s;
+      animation-duration: 0.6s;
       animation-fill-mode: both;
     }
   }
@@ -198,21 +210,25 @@ body {
   &__switch {
     &--on {
       animation-name: switch-on;
-      animation-duration: .6s;
+      animation-duration: 0.6s;
       animation-fill-mode: both;
+
+      @media (min-width: 1367px) {
+        margin-right: 48px;
+      }
     }
   }
 }
 
 .menu-on {
   animation-name: menu-on;
-  animation-duration: .6s;
+  animation-duration: 0.6s;
   animation-fill-mode: both;
 }
 
 .menu-off {
   animation-name: menu-off;
-  animation-duration: .6s;
+  animation-duration: 0.6s;
   animation-fill-mode: both;
 }
 
@@ -230,7 +246,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #8B7871;
+  background: #8b7871;
   transform: translateX(-100%);
   padding: 2rem;
   z-index: 4;
@@ -242,8 +258,26 @@ body {
     right: 0;
     width: 20px;
     height: 100%;
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
+    background-image: linear-gradient(
+      45deg,
+      black 25%,
+      #ffc16e 25%,
+      #ffc16e 50%,
+      black 50%,
+      black 75%,
+      #ffc16e 75%,
+      #ffc16e 100%
+    );
+    background-image: linear-gradient(
+      45deg,
+      black 25%,
+      #ffc16e 25%,
+      #ffc16e 50%,
+      black 50%,
+      black 75%,
+      #ffc16e 75%,
+      #ffc16e 100%
+    );
     background-size: 56.57px 56.57px;
   }
 
@@ -301,7 +335,7 @@ body {
     @media (min-width: 860px) {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-      width: 100%
+      width: 100%;
     }
 
     @media (min-width: 860px) {
@@ -319,9 +353,9 @@ body {
 
   &__link {
     font-size: 1rem;
-    color: #FFFFEA;
+    color: #ffffea;
     text-decoration: none;
-    transition: color .2s linear;
+    transition: color 0.2s linear;
 
     &:hover {
       color: rgba(255, 255, 234, 0.7);
@@ -359,7 +393,7 @@ body {
       text-decoration: none;
       text-transform: none;
       color: black;
-      transition: background-color .2s linear;
+      transition: background-color 0.2s linear;
     }
 
     @media (min-width: 1024px) and (orientation: landscape) {
@@ -372,7 +406,7 @@ body {
       text-decoration: none;
       text-transform: none;
       color: black;
-      transition: background-color .2s linear;
+      transition: background-color 0.2s linear;
     }
   }
 
@@ -450,7 +484,7 @@ body {
       align-items: center;
       justify-content: center;
       font-size: 40px;
-      line-height: 56px
+      line-height: 56px;
     }
 
     &::after {
@@ -472,20 +506,31 @@ body {
 
   @media (min-width: 1184px) {
     background: rgb(78, 204, 111);
-    background: -moz-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
-    background: -webkit-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
-    background: radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 60%);
+    background: -moz-radial-gradient(
+      circle,
+      rgba(78, 204, 111, 1) 0%,
+      rgba(255, 255, 255, 0) 62%
+    );
+    background: -webkit-radial-gradient(
+      circle,
+      rgba(78, 204, 111, 1) 0%,
+      rgba(255, 255, 255, 0) 62%
+    );
+    background: radial-gradient(
+      circle,
+      rgba(78, 204, 111, 1) 0%,
+      rgba(255, 255, 255, 0) 60%
+    );
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1);
   }
 }
 
 // article
 .article {
-  @media(min-width: 1184px) {
+  @media (min-width: 1184px) {
     width: 100%;
     max-width: 1184px;
     margin: 0 auto;
-
   }
 
   &__header {
@@ -495,7 +540,7 @@ body {
 
     @media (min-width: 1184px) {
       font-size: 36px;
-      line-height: 48px
+      line-height: 48px;
     }
   }
 
@@ -526,7 +571,6 @@ body {
         transform: none;
       }
     }
-
   }
 
   &__menu {
@@ -567,8 +611,26 @@ body {
       right: 0;
       width: 100%;
       height: 20px;
-      background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-      background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
+      background-image: linear-gradient(
+        45deg,
+        black 25%,
+        #ffc16e 25%,
+        #ffc16e 50%,
+        black 50%,
+        black 75%,
+        #ffc16e 75%,
+        #ffc16e 100%
+      );
+      background-image: linear-gradient(
+        45deg,
+        black 25%,
+        #ffc16e 25%,
+        #ffc16e 50%,
+        black 50%,
+        black 75%,
+        #ffc16e 75%,
+        #ffc16e 100%
+      );
       background-size: 56.57px 56.57px;
     }
 
@@ -596,10 +658,10 @@ body {
     display: block;
     text-decoration: none;
     text-transform: uppercase;
-    color: #171F3F;
+    color: #171f3f;
     padding: 8px;
     text-align: center;
-    transition: background-color .2s linear;
+    transition: background-color 0.2s linear;
     font-size: 18px;
     font-weight: 500;
     line-height: 36px;
@@ -653,7 +715,7 @@ body {
     font-size: 22px;
     font-weight: 500;
     line-height: 32px;
-    border-bottom: 2px solid #CBD2D9;
+    border-bottom: 2px solid #cbd2d9;
 
     &--space {
       padding-top: 80px;
@@ -698,7 +760,7 @@ body {
 
   &__code {
     display: block;
-    background: #C0D3D3;
+    background: #c0d3d3;
     margin-top: 8px;
     margin-bottom: 8px;
     padding: 16px;
@@ -724,7 +786,7 @@ body {
     line-height: 26px;
     outline: none;
 
-    @media(min-width:1184px) {
+    @media (min-width: 1184px) {
       font-size: 18px;
       font-size: 18px;
       line-height: 40px;
@@ -737,10 +799,10 @@ body {
       left: 0;
       width: 16px;
       height: 16px;
-      background: url('../assets/img/link.svg') no-repeat 100% 0;
+      background: url("../assets/img/link.svg") no-repeat 100% 0;
       background-size: cover;
 
-      @media(min-width: 1184px) {
+      @media (min-width: 1184px) {
         width: 18px;
         height: 18px;
       }
@@ -769,15 +831,15 @@ body {
 .card {
   margin: 48px 0;
   padding: 8px;
-  border: 2px solid #CBD2D9;
+  border: 2px solid #cbd2d9;
   border-radius: 4px;
 
   &__header {
     font-size: 22px;
     font-weight: 500;
-    color: #52606D;
+    color: #52606d;
 
-    @media(min-width: 1184px) {
+    @media (min-width: 1184px) {
       margin: 30px 24px;
       font-size: 28px;
       line-height: 40px;
@@ -805,7 +867,7 @@ body {
       left: 0;
       width: 16px;
       height: 16px;
-      background: url('../assets/img/link.svg') no-repeat 100% 0;
+      background: url("../assets/img/link.svg") no-repeat 100% 0;
       background-size: cover;
 
       @media (min-width: 1184px) {
@@ -835,7 +897,7 @@ body {
 
   &__code {
     display: block;
-    background: #C0D3D3;
+    background: #c0d3d3;
     margin-top: 8px;
     margin-bottom: 8px;
     padding: 16px;
@@ -883,7 +945,7 @@ body {
   &__caption {
     text-align: center;
     border: 1px solid black;
-    background: #BFBFB0;
+    background: #bfbfb0;
     padding: 10px;
   }
 
@@ -896,11 +958,11 @@ body {
     }
 
     &--falsy {
-      background: #A7A9CC;
+      background: #a7a9cc;
     }
 
     &--truthy {
-      background: #B2CCA7;
+      background: #b2cca7;
     }
   }
 }
@@ -910,7 +972,7 @@ body {
   padding: 24px;
   text-align: center;
   font-size: 1rem;
-  background: #8B7871;
+  background: #8b7871;
 
   &__paragraph {
     margin: 0 80px;
@@ -941,17 +1003,16 @@ body {
   @media (min-width: 1366px) {
     font-size: 2rem;
   }
-
 }
 
 // others
-code[class*=language-],
-pre[class*=language-] {
+code[class*="language-"],
+pre[class*="language-"] {
   margin: 16px 0;
   white-space: pre-line;
   word-break: break-word;
 
-  @media(min-width: 1184px) {
+  @media (min-width: 1184px) {
     margin: 16px 0 16px 24px;
     font-size: 18px;
   }
