--- a/css/main.css
+++ b/css/main.css
@@ -1356,19 +1356,21 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   min-height: 100vh;
-  font-family: 'Rubik', sans-serif;
-  color: #171F3F;
-  background: #FFFFEA;
+  font-family: "Rubik", sans-serif;
+  color: #171f3f;
+  background: #ffffea;
   background-size: 20px 20px;
   background-image: -o-linear-gradient(left, #e9f0f0 1px, transparent 1px), -o-linear-gradient(top, #e9f0f0 1px, transparent 1px);
   background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);
-  scrollbar-width: none;
   /* For Firefox */
-  -ms-overflow-style: none;
-  /* For Internet Explorer and Edge */ }
-  body::-webkit-scrollbar {
-    width: 0;
-    /* For Chrome, Safari, and Opera */ }
+  /* For Internet Explorer and Edge */
+  /* For Chrome, Safari, and Opera */ }
+
+.no-scroll-bar {
+  overflow-y: hidden;
+  /* For Firefox */
+  /* For Internet Explorer and Edge */
+  /* For Chrome, Safari, and Opera */ }
 
 /*button menu */
 .menuButton,
@@ -1408,47 +1410,50 @@ body {
   .menuButton__line--on {
     -webkit-animation-name: line-on;
             animation-name: line-on;
-    -webkit-animation-duration: .6s;
-            animation-duration: .6s;
+    -webkit-animation-duration: 0.6s;
+            animation-duration: 0.6s;
     -webkit-animation-fill-mode: both;
             animation-fill-mode: both; }
   .menuButton__line--off {
     -webkit-animation-name: line-off;
             animation-name: line-off;
-    -webkit-animation-duration: .6s;
-            animation-duration: .6s;
+    -webkit-animation-duration: 0.6s;
+            animation-duration: 0.6s;
     -webkit-animation-fill-mode: both;
             animation-fill-mode: both; }
 
 .menuButton__switch--off {
   -webkit-animation-name: switch-off;
           animation-name: switch-off;
-  -webkit-animation-duration: .6s;
-          animation-duration: .6s;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both; }
 
 .menuButton__switch--on {
   -webkit-animation-name: switch-on;
           animation-name: switch-on;
-  -webkit-animation-duration: .6s;
-          animation-duration: .6s;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both; }
+  @media (min-width: 1367px) {
+    .menuButton__switch--on {
+      margin-right: 48px; } }
 
 .menu-on {
   -webkit-animation-name: menu-on;
           animation-name: menu-on;
-  -webkit-animation-duration: .6s;
-          animation-duration: .6s;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both; }
 
 .menu-off {
   -webkit-animation-name: menu-off;
           animation-name: menu-off;
-  -webkit-animation-duration: .6s;
-          animation-duration: .6s;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both; }
 
@@ -1471,7 +1476,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #8B7871;
+  background: #8b7871;
   -webkit-transform: translateX(-100%);
       -ms-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -1484,9 +1489,9 @@ body {
     right: 0;
     width: 20px;
     height: 100%;
-    background-image: -o-linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
+    background-image: -o-linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
+    background-image: linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
+    background-image: linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
     background-size: 56.57px 56.57px; }
   @media (min-width: 1366px) {
     .menu__header {
@@ -1559,11 +1564,11 @@ body {
         margin: 0; } }
   .menu__link {
     font-size: 1rem;
-    color: #FFFFEA;
+    color: #ffffea;
     text-decoration: none;
-    -webkit-transition: color .2s linear;
-    -o-transition: color .2s linear;
-    transition: color .2s linear; }
+    -webkit-transition: color 0.2s linear;
+    -o-transition: color 0.2s linear;
+    transition: color 0.2s linear; }
     .menu__link:hover {
       color: rgba(255, 255, 234, 0.7); }
       @media (min-width: 768px) and (orientation: portrait) {
@@ -1599,9 +1604,9 @@ body {
         text-decoration: none;
         text-transform: none;
         color: black;
-        -webkit-transition: background-color .2s linear;
-        -o-transition: background-color .2s linear;
-        transition: background-color .2s linear; } }
+        -webkit-transition: background-color 0.2s linear;
+        -o-transition: background-color 0.2s linear;
+        transition: background-color 0.2s linear; } }
     @media (min-width: 1024px) and (orientation: landscape) {
       .menu__link {
         display: -webkit-box;
@@ -1618,9 +1623,9 @@ body {
         text-decoration: none;
         text-transform: none;
         color: black;
-        -webkit-transition: background-color .2s linear;
-        -o-transition: background-color .2s linear;
-        transition: background-color .2s linear; } }
+        -webkit-transition: background-color 0.2s linear;
+        -o-transition: background-color 0.2s linear;
+        transition: background-color 0.2s linear; } }
   .menu__description {
     display: none; }
     @media (min-width: 768px) and (orientation: portrait) {
@@ -1842,9 +1847,9 @@ body {
     right: 0;
     width: 100%;
     height: 20px;
-    background-image: -o-linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
-    background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
+    background-image: -o-linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
+    background-image: linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
+    background-image: linear-gradient(45deg, black 25%, #ffc16e 25%, #ffc16e 50%, black 50%, black 75%, #ffc16e 75%, #ffc16e 100%);
     background-size: 56.57px 56.57px; }
   @media (min-width: 1184px) {
     .article__list::after {
@@ -1868,12 +1873,12 @@ body {
   display: block;
   text-decoration: none;
   text-transform: uppercase;
-  color: #171F3F;
+  color: #171f3f;
   padding: 8px;
   text-align: center;
-  -webkit-transition: background-color .2s linear;
-  -o-transition: background-color .2s linear;
-  transition: background-color .2s linear;
+  -webkit-transition: background-color 0.2s linear;
+  -o-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
   font-size: 18px;
   font-weight: 500;
   line-height: 36px; }
@@ -1916,7 +1921,7 @@ body {
     font-size: 22px;
     font-weight: 500;
     line-height: 32px;
-    border-bottom: 2px solid #CBD2D9; }
+    border-bottom: 2px solid #cbd2d9; }
     .section__header--space {
       padding-top: 80px; }
     @media (min-width: 1184px) {
@@ -1945,7 +1950,7 @@ body {
         line-height: 40px; } }
   .section__code {
     display: block;
-    background: #C0D3D3;
+    background: #c0d3d3;
     margin-top: 8px;
     margin-bottom: 8px;
     padding: 16px;
@@ -2008,12 +2013,12 @@ body {
 .card {
   margin: 48px 0;
   padding: 8px;
-  border: 2px solid #CBD2D9;
+  border: 2px solid #cbd2d9;
   border-radius: 4px; }
   .card__header {
     font-size: 22px;
     font-weight: 500;
-    color: #52606D; }
+    color: #52606d; }
     @media (min-width: 1184px) {
       .card__header {
         margin: 30px 24px;
@@ -2062,7 +2067,7 @@ body {
         line-height: 40px; } }
   .card__code {
     display: block;
-    background: #C0D3D3;
+    background: #c0d3d3;
     margin-top: 8px;
     margin-bottom: 8px;
     padding: 16px;
@@ -2096,7 +2101,7 @@ body {
   .table__caption {
     text-align: center;
     border: 1px solid black;
-    background: #BFBFB0;
+    background: #bfbfb0;
     padding: 10px; }
   .table__cell {
     padding: 10px;
@@ -2104,15 +2109,15 @@ body {
     .table__cell:nth-child(1) {
       border-right: 1px solid black; }
     .table__cell--falsy {
-      background: #A7A9CC; }
+      background: #a7a9cc; }
     .table__cell--truthy {
-      background: #B2CCA7; }
+      background: #b2cca7; }
 
 .footer {
   padding: 24px;
   text-align: center;
   font-size: 1rem;
-  background: #8B7871; }
+  background: #8b7871; }
   .footer__paragraph {
     margin: 0 80px; }
   @media (min-width: 360px) and (orientation: portrait) {
@@ -2136,14 +2141,14 @@ body {
     .footer {
       font-size: 2rem; } }
 
-code[class*=language-],
-pre[class*=language-] {
+code[class*="language-"],
+pre[class*="language-"] {
   margin: 16px 0;
   white-space: pre-line;
   word-break: break-word; }
   @media (min-width: 1184px) {
-    code[class*=language-],
-    pre[class*=language-] {
+    code[class*="language-"],
+    pre[class*="language-"] {
       margin: 16px 0 16px 24px;
       font-size: 18px; } }
 
